# trax_retail

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
apps/entities/: base.py
apps/entities/product/: manager.py  types.py
apps/entities/product/schemas/: product.py  product_snapshot.py
apps/entities/qa/: manager.py  validators.py
apps/entities/qa/schemas/: leaderboard.py  session.py
core/: db.py  exceptions.py  redis.py  s3.py  types.py  utils.py
core/settings/: db.py  redis.py  s3.py
db/: migrations.py
db/models/: product.py  qa.py
db/queries/: base.py
db/queries/products/: product.py  product_snapshot.py
db/queries/qa/: leaderboard.py  session.py  session_result.py
services/api/: deps.py  main.py  tests.py  utils.py
services/api/schemas/: responses.py
services/api/v1/qa/: endpoints.py
services/api/v1/qa/schemas/: requests.py  responses.py
startup_scripts/: fill_db.py
